# XIVProfit

./: .env.template  Cargo.toml  README.MD  README.md
src/: cache.rs  crafting.rs  main.rs  market.rs  web.rs
xivprofit-backend/: .env.template  Cargo.toml
xivprofit-backend/src/: cache.rs  crafting.rs  main.rs  market.rs  web.rs
xivprofit-backend/src/market/: optimizer.rs
xivprofit-web/: index.html  package-lock.json  package.json
xivprofit-web/src/: App.tsx  config.ts  data.ts  recipeDisplay.tsx  types.ts
