[package]
name = "XIVProfit"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version ="0.7.9", features = ["macros"] }
csv = "1.3.1"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.22"
reqwest = { version = "0.12.11", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
